<resources>

    <!-- Overview Activity strings -->
    <string name="app_name">StockMonitor</string>
    <string name="StockType">Facebook</string>
    <string name="StockTag">Purchased at</string>
    <string name="StockPrice">Purchased at: %1$3.2f</string>
    <string name="OverviewButton">Details</string>

    <!-- Details Activity strings -->
    <string name="StockName">Name:</string>
    <string name="StockTag2">Price:</string>
    <string name="NumberOfStocks">#Stocks:</string>
    <string name="Sector">Sector:</string>
    <string name="BackButton">Back</string>
    <string name="EditButton">Edit</string>



    <!-- Edit Activity strings -->
    <string name="CheckBox1">Technology</string>
    <string name="CheckBox2">Healthcare</string>
    <string name="CheckBox3">Basic Materials</string>
    <string name="CancelButton">Cancel</string>
    <string name="SaveButton">Save</string>
    <string name="MissingName">Please set a name</string>
    <string name="MissingPrice">Please set a price</string>
    <string name="MissingStock">Please set a stock</string>


</resources>
