<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="134dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editBtn"
        app:layout_constraintStart_toStartOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_nameText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|center"
                android:gravity="left"
                android:text="@string/StockName"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="55dp" />

            <TextView
                android:id="@+id/details_priceText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/StockTag2"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="96dp" />

            <TextView
                android:id="@+id/details_stockText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="left"
                android:text="@string/NumberOfStocks"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="143dp" />

            <TextView
                android:id="@+id/details_sectorText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="left"
                android:text="@string/Sector"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="183dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_name"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="TextView"
                tools:layout_editor_absoluteX="227dp"
                tools:layout_editor_absoluteY="55dp" />

            <TextView
                android:id="@+id/details_price"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="TextView"
                tools:layout_editor_absoluteX="227dp"
                tools:layout_editor_absoluteY="143dp" />

            <TextView
                android:id="@+id/details_stock"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="TextView"
                tools:layout_editor_absoluteX="225dp"
                tools:layout_editor_absoluteY="96dp" />

            <TextView
                android:id="@+id/details_sector"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="TextView"
                tools:layout_editor_absoluteX="227dp"
                tools:layout_editor_absoluteY="183dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/BackButton"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/EditButton"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>